fix: tighten row column gap for title changes in resume

--- a/assets/resume/_me.css
+++ b/assets/resume/_me.css
@@ -88,6 +88,10 @@
   }
 }
 
+.short-col {
+  margin-top: -0.75rem;
+}
+
 .downloader {
   position: absolute;
   top: 1.5rem;
